--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -13,4 +13,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
