--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -11,9 +11,9 @@
 
 body {
   margin: 0;
-  min-width: 320px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f1f1f1;
 }
